--- a/assets/style.css
+++ b/assets/style.css
@@ -1,94 +1,77 @@
 .main {
-  max-width: 1200px;
-}
+  max-width: 1200px; }
 
 .logo {
   width: 200px;
-  margin: auto;
-}
+  margin: auto; }
 
 .coc p {
-  text-indent: 20px;
-}
+  text-indent: 20px; }
 
 .header {
-  font-weight: bold;
-}
+  font-weight: bold; }
 
 .ping_clause {
   font-weight: bold;
-  font-size: 15pt;
-}
+  font-size: 15pt; }
 
 #logoArea {
   display: grid;
-  justify-items: center;
-}
+  justify-items: center; }
 
 #inviteForm {
   display: grid;
   grid-template-columns: max-content auto;
   align-items: start;
-  grid-gap: 10px;
-}
+  grid-gap: 10px; }
 
 #agreeRow {
   display: grid;
-  grid-template-columns: max-content auto;
-  align-items: start;
-  grid-gap: 20px;
-}
+  grid-template-columns: max-content auto; }
 
 #inviteForm input {
-  margin-bottom: 10px;
-}
-
-#inviteForm input[type="text"] {
-  padding: 10px;
-  border: solid 1px #fff;
-  box-shadow: inset 1px 1px 2px 0 #707070;
-  transition: box-shadow 0.1s;
-}
-
-#inviteForm input[type="text"]:focus {
-  box-shadow: inset 1px 1px 2px 0 #c9c9c9;
-}
+  margin-bottom: 10px; }
 
 #acceptButton {
-  grid-column: 2;
-}
+  grid-column: 2; }
 
 @media (max-width: 600px) {
   #inviteForm {
-    grid-template-columns: 1fr;
-  }
+    grid-template-columns: 1fr; }
 
   #acceptButton {
-    grid-column: 1;
-  }
-}
-
+    grid-column: 1; } }
 #topnav {
-  display: flex;
+  diplay: flex;
   flex-direction: row;
   justify-content: flex-end;
   list-style: none;
   border-bottom: 1px solid rgba(206, 195, 195, 0.767);
   padding-bottom: 5px;
-  margin-top: 10px;
-}
+  margin-top: 10px; }
 
 @media (max-width: 600px) {
   #topnav {
-    flex-direction: column;
-  }
-}
-
-#topnav > li {
-  margin-right: 20px;
-}
+    flex-direction: column; } }
+#topnav li {
+  margin-right: 20px; }
+  #topnav li a {
+    text-decoration: none;
+    color: #337ab7; }
+  #topnav li a:hover {
+    color: blueviolet; }
 
 #login_nav {
-  flex: 1;
-}
+  flex: 1; }
 
+blockquote {
+  border-left: 5px solid #d1c1c1;
+  padding-left: 20px;
+  margin-left: 0; }
+
+#agreeRow {
+  display: grid;
+  grid-template-columns: max-content auto;
+  align-items: center; }
+
+/*# sourceMappingURL=style.css.map */
