--- a/templates/main.jade
+++ b/templates/main.jade
@@ -2,14 +2,10 @@ doctype html
 html
   head
     meta(charset='utf-8')
-    meta(name='viewport' content='width=device-width, initial-scale=1')
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
-    link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
-    link(rel='stylesheet' integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u' crossorigin='anonymous')
-    link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css' integrity='sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp' crossorigin='anonymous')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js' integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa' crossorigin='anonymous')
+    meta(name='viewport' content='width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1')
     script(src='/assets/bundle.js')
     link(rel='stylesheet' href='/assets/style.css')
+  <link rel="stylesheet" href="/assets/bootstrap.min.css" crossorigin="anonymous">
     title Julia slack registration
     script.
       page = "!{page}"
