--- a/src/style.sass
+++ b/src/style.sass
@@ -83,3 +83,6 @@ blockquote
     display: grid
     grid-template-columns: max-content auto
     align-items: center
+
+    input
+        margin-left: $padding
