Fix flex display

--- a/src/style.sass
+++ b/src/style.sass
@@ -48,7 +48,7 @@ $padding: 10px
         grid-column: 1
 
 #topnav
-    diplay: flex
+    display: flex
     flex-direction: row
     justify-content: flex-end
     list-style: none
